Harden RESTful EMF imports and simplify submission fixtures
Preserve cross-document references through JSON reloads, strengthen ETag
validation, and protect behavior with real EMF and HTTP regressions.

Deduplicate fixtures, align dependencies and document the upstream audit.